**************************************
*** SquirrelMail Stable Series 1.4 ***
**************************************

Version 1.4.3 - CVS
-------------------
  - Fix form functions default parameter.
  - Disabled Korean extra functions, because they don't provide all required
    options and message composition is broken.


Version 1.4.3-RC1 - 10 May 2004
-------------------------------
  - Added new preference that determines cursor focus when replying.
  - HTML Filter bugfixes and further strengthening in response to some
    findings reported by stardust.
  - Display total number of new messages in newmail-plugin popup window.
  - Disabled Vietnamese and Ukrainian translations. They are done in different
    language.
  - Ported charset decoding support functions from SM head. Increases
    number of readable charsets.
  - Fix SquirrelMail to work with PHP5.
  - Reintroduce alternating row colors in addressbook, which has
    accidentally disappeared somewhere in the dark past.
  - Disabled Quick-email-reporting feature in spamcop plugin. (#809452). Admin
    can enable it by setting variable in plugins/spamcop/setup.php
  - Fix again for Internet Explorer's stupidity of decoding characters, then
    executing it blindly. See http://www.securityfocus.com/archive/1/340118.
  - Replaced obsolete 2mbit.com RBL with ahbl.org RBL (#829887).
  - Fixed sorting of sent_subfolders.
    Sent_subfolder plugin is hooked to special_mailbox hook.
    Stable 1.4 tracker #699920.
  - New hook function: boolean_hook_function()  Used for true/false hooks.
  - Fixed special_mailbox hook to allow more than one hooked plugin (#870365).
  - Added new reply citation to include date and author.
  - Fix some XSS issues.
  - Norwegian Bokmal translation uses nb_NO.
  - Improve display of some unparsable/absent dates (#891354).
  - Added non-anonymous LDAP bind and bind protocol patches from devel.
  - Add comment (Highest,Normal,Lowest) to X-Priority header.